test/testdata/classes/inheritance/static/super_missing_property_error.lox
class Superclass {}

class Subclass < Superclass {
  static method() {
    super.method();
  }
}

Subclass.method(); // error: 'Subclass class' object has no property 'method'
